Specify PHP version (min-requirement) in composer.json

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "Alerts"
     ],
     "require": {
-        "php": "^8.0|^8.1|^8.2",
+        "php": ">=8.0",
         "mindscape/raygun4php": "^2.0"
     },
     "autoload": {
